Updated URL at contact page

--- a/content/contact.html
+++ b/content/contact.html
@@ -37,9 +37,9 @@
             </a>
         </li>
         <li>
-            This Website:
-            <a class="emptyClass" href="https://marco-acevedo-official.github.io/CECS3214-HW1/">
-                https://marco-acevedo-official.github.io/CECS3214-HW1/
+            Website with other style:
+            <a class="emptyClass" href="https://marco-acevedo-official.github.io/CECS3214-HW1-style1/">
+                https://marco-acevedo-official.github.io/CECS3214-HW1-style1/
             </a>
         </li>
 
