A lot has been done

--- a/content/contact.html
+++ b/content/contact.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" />
     <title>Contact Me</title>
-    <link rel="stylesheet" href="../styles/general.css">
+    <link rel="stylesheet" href="../styles/style2.css">
 </head>
-<body>
+<body class="m0">
     <!-- Navigation Menu -->
     <nav>
         <a href="../index.html">Home</a>
@@ -15,35 +15,38 @@
         <a href="./contact.html">Contact</a>
     </nav>
     <!-- Navigation Menu -->
-    <h1>Places to Contact me</h1>
-    <!--Contact Info-->
-    <ul>
-        <li>
-            In-person:
-            <a class="emptyClass" href="https://goo.gl/maps/isnUJtzvtDJLkENK8">
-                Aguada, Puerto Rico
-            </a>
-        </li>
-        <li>
-            Email:
-            <a class="emptyClass" href="mailto:marco.acevedo.official@gmail.com">
-                marco.acevedo.official@gmail.com
-            </a>
-        </li>
-        <li>
-            Phone:
-            <a class="emptyClass" href="tel:13217321963">
-                (321-132-1963)
-            </a>
-        </li>
-        <li>
-            Website with other style:
-            <a class="emptyClass" href="https://marco-acevedo-official.github.io/CECS3214-HW1-style1/">
-                https://marco-acevedo-official.github.io/CECS3214-HW1-style1/
-            </a>
-        </li>
+    <h1 class="title">Places to Contact me</h1>
 
-    </ul>
     <!--Contact Info-->
+    
+        <ul class="intrasub">
+            <li>
+                In-person:
+                <a class="emptyClass" href="https://goo.gl/maps/isnUJtzvtDJLkENK8">
+                    Aguada, Puerto Rico
+                </a>
+            </li>
+            <li>
+                Email:
+                <a class="emptyClass" href="mailto:marco.acevedo.official@gmail.com">
+                    marco.acevedo.official@gmail.com
+                </a>
+            </li>
+            <li>
+                Phone:
+                <a class="emptyClass" href="tel:13217321963">
+                    (321-132-1963)
+                </a>
+            </li>
+            <li>
+                Website with other style:
+                <a class="emptyClass" href="https://marco-acevedo-official.github.io/CECS3214-HW1-style1/">
+                    https://marco-acevedo-official.github.io/CECS3214-HW1-style1/
+                </a>
+            </li>
+        </ul>
+
+    <!--Contact Info-->
+
 </body>
 </html>
