--- a/content/about.html
+++ b/content/about.html
@@ -4,10 +4,10 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" />
     <title>About</title>
-    <link rel="stylesheet" href="../styles/general.css">
+    <link rel="stylesheet" href="../styles/style2.css">
 </head>
 
-<body>
+<body class="m0">
     <!-- Navigation Menu -->
     <nav>
         <a href="../index.html">Home</a>
@@ -17,27 +17,25 @@
     </nav>
     <!-- Navigation Menu -->
     <!-- Profile Information Start -->
-    <h1 class="text-center fs-xxl">
+    <h1 class="title">
         Marco Antonio Acevedo Gonzalez
-
+        <h2 class="transparent">
+            Senior Student in Computer Engineering
+        </h2>
     </h1>
-
-    <h2 class="text-center">
-        Senior Student in Computer Engineering
-    </h2>
 
     <p class="text-center">
         Currently looking for employment in order to gain professional work experience.
     </p>
 
-    <IMG class="img-center" SRC="../media/about-profilepic.jpg" alt="Profile Picture">
+    <IMG SRC="../media/about-profilepic.jpg" alt="Profile Picture">
     <br>
     <br>
     <br>
     <!-- Profile Information End -->
     <!--Approved Courses Start-->
-    <section class="text-center">
-        <h3>
+    <section>
+        <h3 class="subtitle">
             Approved Courses
         </h3>
         <p>
@@ -49,14 +47,14 @@
     </section>
     <!--Approved Courses End-->
     <!--Interest and Hobbies Start-->
-    <section class="text-center">
-        <h3>
+    <section>
+        <h3 class="subtitle">
             Interests and Hobbies:
         </h3>
         <p>
             Computer Hardware<br />
             Renewable Energy<br />
-            Finance<br />
+            Finance and economics<br />
             Blockchain Technology<br />
         </p>
     </section>
