--- a/content/projects.html
+++ b/content/projects.html
@@ -5,10 +5,11 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
-    <link rel="stylesheet" href="../styles/general.css">
+    <link rel="stylesheet" href="../styles/style2.css">
 </head>
 
-<body>
+<body class="m0">
+    
     <!-- Navigation Menu -->
     <nav>
         <a href="../index.html">Home</a>
@@ -18,48 +19,60 @@
     </nav>
     <!-- Navigation Menu -->
 
-    <div>
-
-            <h1>
-                Projects involved
-            </h1>
+        <h1 class="title">
+            Projects involved
+        </h1>
 
         <hr />
+
+<div class="transparent">
         <!-- First Project Start -->
-        <h2>
+        <h2 class="subtitle">
             Arduino: Bluetooth to LCD
         </h2>
 
-        <a href="https://gitlab.com/marco.acevedo/arduino-bt-2-lcd">
-            Git Link for source
-        </a>
+        <br />
 
-        <br /><br />
-
-        <IMG class="scaleandcenter" SRC="..\media\project-bt2lcd.jpg" alt="Arduino Picture">
+        <IMG class="nice" SRC="..\media\project-bt2lcd.jpg" alt="Arduino Picture">
+            <br /><br />
+            <a class="glow" href="https://gitlab.com/marco.acevedo/arduino-bt-2-lcd">
+                Git Link for source
+            </a>
+            <br />
+            <br />
 
         <p>
             A proof of concept to send a string of text using a device with a bluetooth terminal.
-            <br /><br />
-            Hardware Components:
         </p>
 
-        <ul>
-            <li>Arduino Uno</li>
-            <li>LCD Display</li>
-            <li>Bluetooth Transceiver Module</li>
-            <li>Power Source</li>
-            <li>Phone with Bluetooth terminal</li>
-        </ul>
-        <!-- First Project End -->
-        <!--Second Project Start-->
-        <h2>Programming functions to a Calculator</h2>
+        <h2 class="intrasub">
+            Hardware Components:
+            <ul>
+                <li>Arduino Uno</li>
+                <li>LCD Display</li>
+                <li>Bluetooth Transceiver Module</li>
+                <li>Power Source</li>
+                <li>Phone with Bluetooth terminal</li>
+            </ul>
+        </h2>
 
-        <iframe class="centerSBS YT-video-size" src="https://www.youtube.com/embed/voouoUADTwU"
+</div>
+        <!-- First Project End -->
+
+        <br />
+        <br />
+        <br />
+
+
+<div class="transparent">
+        <!--Second Project Start-->
+        <h2 class="subtitle">Programming functions to a Calculator</h2>
+
+        <iframe class="YTwindow" src="https://www.youtube.com/embed/voouoUADTwU"
                 title="Ti-89 video">
         </iframe>
 
-        <iframe class="centerSBS YT-video-size" src="https://www.youtube.com/embed/_aZgY3S5uGc"
+        <iframe class="YTwindow" src="https://www.youtube.com/embed/_aZgY3S5uGc"
                 title="Ti-Nspire video">
         </iframe>
 
@@ -69,8 +82,8 @@
             The videos were published by the university's logistics laboratory and have since been used every academic term.<br />
         </p>
         <!--Second Project End-->
+</div>
 
-    </div>
 
 </body>
 </html>
