--- a/content/contact.html
+++ b/content/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1" />
     <title>Contact Me</title>
-    <link rel="stylesheet" href="../styles/style2.css">
+    <link id="sheet" rel="stylesheet" href="../styles/style2.css">
     <script type="text/javascript">
 
         function change1(){
