--- a/content/projects.html
+++ b/content/projects.html
@@ -5,17 +5,14 @@
 <head>
     <meta charset="utf-8" name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Projects</title>
-    <link rel="stylesheet" href="../styles/style2.css">
+    <link id="sheet" rel="stylesheet" href="../styles/style2.css">
     <script type="text/javascript">
-
         function change1(){
            document.getElementById("sheet").href = "../styles/style1.css";
         }
-
         function change2(){
             document.getElementById("sheet").href = "../styles/style2.css";
         }
-
     </script>
 </head>
 
