--- a/content/projects.html
+++ b/content/projects.html
@@ -17,15 +17,16 @@
 </head>
 
 <body class="m0">
-    
+
     <!-- Navigation Menu -->
     <nav>
         <a href="../index.html">Home</a>
-        <a href="./projects.html">Projects</a>
         <a href="./about.html">About</a>
+        <a href="./projects.html">Projects</a>
         <a href="./contact.html">Contact</a>
-        <button onclick="change1()">Switch Style1</button>
-        <button onclick="change2()">Switch Style2</button>
+        <a href="./quiz.html">Quiz</a>
+        <button onclick="change1()">Switch Style Dark</button>
+        <button onclick="change2()">Switch Style Color</button>
     </nav>
     <!-- Navigation Menu -->
 
