--- a/content/contact.html
+++ b/content/contact.html
@@ -6,26 +6,24 @@
     <title>Contact Me</title>
     <link id="sheet" rel="stylesheet" href="../styles/style2.css">
     <script type="text/javascript">
-
         function change1(){
            document.getElementById("sheet").href = "../styles/style1.css";
         }
-
         function change2(){
             document.getElementById("sheet").href = "../styles/style2.css";
         }
-
     </script>
 </head>
 <body class="m0">
     <!-- Navigation Menu -->
     <nav>
         <a href="../index.html">Home</a>
-        <a href="./projects.html">Projects</a>
         <a href="./about.html">About</a>
+        <a href="./projects.html">Projects</a>
         <a href="./contact.html">Contact</a>
-        <button onclick="change1()">Switch Style1</button>
-        <button onclick="change2()">Switch Style2</button>
+        <a href="./quiz.html">Quiz</a>
+        <button onclick="change1()">Switch Style Dark</button>
+        <button onclick="change2()">Switch Style Color</button>
     </nav>
     <!-- Navigation Menu -->
     <h1 class="title">Places to Contact me</h1>
