Added Adobe Animate HTML page

--- a/index.html
+++ b/index.html
@@ -28,8 +28,9 @@
         <a href="./content/projects.html">Projects</a>
         <a href="./content/contact.html">Contact</a>
         <a href="./content/quiz.html">Quiz</a>
-        <button onclick="change1()">Switch Style Dark</button>
-        <button onclick="change2()">Switch Style Color</button>
+        <a href="./adobe/EVERYTHING.html">Adobe</a>
+        <button onclick="change1()">Dark Style</button>
+        <button onclick="change2()">Color Style</button>
     </nav>
     <!-- Navigation Menu -->
     
