--- a/content/about.html
+++ b/content/about.html
@@ -23,8 +23,9 @@
         <a href="./projects.html">Projects</a>
         <a href="./contact.html">Contact</a>
         <a href="./quiz.html">Quiz</a>
-        <button onclick="change1()">Switch Style Dark</button>
-        <button onclick="change2()">Switch Style Color</button>
+        <a href="../adobe/EVERYTHING.html">Adobe</a>
+        <button onclick="change1()">Dark Style</button>
+        <button onclick="change2()">Color Style</button>
     </nav>
     <!-- Navigation Menu -->
 
