XML and XSD complete

--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         <a href="./content/contact.html">Contact</a>
         <a href="./content/quiz.html">Quiz</a>
         <a href="./adobe/EVERYTHING.html">Adobe</a>
+        <a href="./XML/textbooks.xml">Textbooks</a>
+
         <button onclick="change1()">Dark Style</button>
         <button onclick="change2()">Color Style</button>
     </nav>
